Forked contents, first commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,24 +13,20 @@
     {% seo %}
   </head>
   <body>
-    <div class="container clear-top">
-      {% include navigation.html %}
-      {{ content }}
-    </div>
+  <div class="container clear-top">
+    {% include navigation.html %}
+    {{ content }}
+  </div>
     
 
     <!-- Footer Starts -->
     <div class="container text-center">
     <div class=" fixed-bottom position-relative bg-light ">
-     <p class="text-justified font-italic"> 
-       © 2019 <a href="https://rahulrajpl.github.io">Rahul Raj</a>. This website is under 
-       <a href="LICENSE.txt">GNU Free Documentation License</a>. 
-      <br>Created using <a href="https://jekyllrb.com/">jekyll</a> + 
-      <a href="https://getbootstrap.com">Bootstrap</a> and is hosted on <a href="https://github.com/">github</a>. 
-      Source code is <a href="https://github.com/rblogs/rblogs.github.io">open</a> to fork
-      <br>
-      <a href="http://www.anybrowser.org/campaign/"><img src="/assets/images/anotheranybrowser.gif" width="graphic-width-in-pixels"
-          height="graphic-height-in-pixels" alt="Viewable With Any Browser" /></a>
+    <a href="http://www.anybrowser.org/campaign/"><img src="/assets/images/anotheranybrowser.gif"
+        width="graphic-width-in-pixels" height="graphic-height-in-pixels" alt="Viewable With Any Browser" /></a><p class="text-justified font-italic"> 
+       © 2019 <a href="https://rahulrajpl.github.io">Rahul Raj</a>. 
+       <a href="/LICENSE.txt">GNU Free Documentation License</a>. Templates forked from <a href="https://jekyllrb.com/">here</a> and
+      <a href="https://getbootstrap.com">here</a>.       
       <p>
     
     </div>
